--- a/677_Notes_Quarto.qmd
+++ b/677_Notes_Quarto.qmd
@@ -19,34 +19,32 @@ knitr::opts_chunk$set(echo = TRUE)
 The following are notes for Chapter 5 of *Elementary Decision Making*, titled "Uncertainty due to Ignorance of the State of Nature".
 
 # Libraries
+
 ```{r warning=FALSE}
 suppressPackageStartupMessages(library(ggplot2))
 suppressPackageStartupMessages(library(tidyverse))
 ```
 
 # Data
+
 First, the data from the tables featured will be created.
 
 Following page 120, the following variables/conditions exist:
 
-States of nature:
-$\theta_1$ = "Today is a sunny day."
-$\theta_2$ = "Today is a rainy day."
+States of nature: $\theta_1$ = "Today is a sunny day." $\theta_2$ = "Today is a rainy day."
 
-Available actions:
-$\alpha_1$ = "Wear fair-weather outfit."
-$\alpha_2$ = "Wear outfit with raincoat."
-$\alpha_3$ = "Wear outfit with raincoat, boots, rain hat, and umbrella."
+Available actions: $\alpha_1$ = "Wear fair-weather outfit." $\alpha_2$ = "Wear outfit with raincoat." $\alpha_3$ = "Wear outfit with raincoat, boots, rain hat, and umbrella."
 
 **Table 5.1**
 
-|                    |$\alpha_1$|$\alpha_2$|$\alpha_3$|
-|--------------------|----------|----------|----------|
-|$\theta_1$ (no rain)|0         |1         |3         |
-|$\theta_2$ (rain)   |5         |3         |2         |
+|                      | $\alpha_1$ | $\alpha_2$ | $\alpha_3$ |
+|----------------------|------------|------------|------------|
+| $\theta_1$ (no rain) | 0          | 1          | 3          |
+| $\theta_2$ (rain)    | 5          | 3          | 2          |
 
 ## Tables
-```{r Tables}
+
+```{r Original Tables}
 ## Mr. Nelson's Loss of Utility l(sigma,alpha) from (pg. 120,table 5.1)
 sigma_one <- c(0,1,3)
 sigma_two <- c(5,3,2)
@@ -67,6 +65,9 @@ x_3 <- rep(c("a1","a2","a3"),9)
 Strategy_Table <- data.frame(Strategy,x_1,x_2,x_3)
 
 remove(sigma_one,sigma_two,x_1,x_2,x_3,Strategy)
+```
+
+```{r}
 
 # dfs used to assemble action tables--------------------------------------
 a1_count <- function(column){a <- str_count(column,"a1")}
@@ -91,42 +92,68 @@ tA2 <- t(a2_df %*% tw)
 tA3 <- t(a3_df %*% tw)
 
 EL_calc <- function(strategy){ ### for any strategy 1-27, calculates the EL for sit. 1 and 2
-  df_strategy <- data.frame(p_action1 = tA1[,strategy],
+  Action_Probability_Table <- data.frame(p_action1 = tA1[,strategy],
                             p_action2 = tA2[,strategy],
                             p_action3 = tA3[,strategy])*Loss_table
-  df_strategy$EL <- rowSums(df_strategy)
-  EL <- df_strategy[,4]
+  Action_Probability_Table$EL <- rowSums(Action_Probability_Table)
+  EL <- Action_Probability_Table[,4]
   EL
 }
 
 Loss_of_Utility_Table <- as.data.frame(lapply(1:27, EL_calc))
-Loss_of_Utility_Table_Trans <- t(Loss_of_Utility_Table)
+Loss_of_Utility_Table_Trans <- as.data.frame(t(Loss_of_Utility_Table)) |> 
+  rename(SigmaOne=V1,SigmaTwo=V2) |> 
+  mutate(StrategyNumber = 1:27)
+row.names(Loss_of_Utility_Table_Trans) <- 1:27
 
-Plot_Loss <- ggplot(Loss_of_Utility_Table_Trans,aes())+
-  geom_point()
+Plot_Loss <- ggplot(Loss_of_Utility_Table_Trans,aes(SigmaOne,SigmaTwo))+
+  geom_point()+
+  xlim(0,NA)+
+  ylim(0,NA)+
+  labs(title = "Expected loss of utility for strategy")+
+  geom_text(label=rownames(Loss_of_Utility_Table_Trans),
+            hjust = 0,
+            vjust = 1.3,
+            check_overlap = T)+
+  theme_light()
+Plot_Loss
 
 ```
 
 # Book Exercises
+
 These are exercises listed under Table 5.5 on pg 123.
 
 ## 5.1
+
 Compute the action probabilities and losses for strategy $s_{10}$.
 
 ```{r 5.1}
+#using function above
+EL_calc(10)
 
+strategy <- 10
+
+#pasted from first part in function above
+Action_Probability_Table <- data.frame(p_action1 = tA1[,strategy],
+                            p_action2 = tA2[,strategy],
+                            p_action3 = tA3[,strategy])*Loss_table
+  
+Action_Probability_Table
 ```
 
-## 5.2 
+## 5.2
+
 Use the table of random digits to select an observation according to the probabilities corresponding to $\theta_1$. Apply $s_{10}$ to this observation and list the corresponding action and loss. Repeat ten times and average the ten losses.
 
 ```{r 5.2}
-
+#??
 ```
 
 ## 5.3
+
 If Mr.Nelson replaced his weather meter by a crustal ball which told him the state of nature, $\theta$, reasonable use of this information would provide him with *ideal action probabilities*. Present this table of ideal action probabilities. These are called ideal because with ordinary information no strategy could do this well.
 
 ```{r 5.3}
-
+#just rounded all the prob tables?
 ```
