--- a/677_Notes_Quarto.qmd
+++ b/677_Notes_Quarto.qmd
@@ -100,23 +100,39 @@ EL_calc <- function(strategy){ ### for any strategy 1-27, calculates the EL for 
   EL
 }
 
+# Table 5.4
 Loss_of_Utility_Table <- as.data.frame(lapply(1:27, EL_calc))
+rownames(Loss_of_Utility_Table) <- c("theta_one","theta_two")
+colnames(Loss_of_Utility_Table) <- 
+
+
+### setting up table for plot
 Loss_of_Utility_Table_Trans <- as.data.frame(t(Loss_of_Utility_Table)) |> 
-  rename(SigmaOne=V1,SigmaTwo=V2) |> 
+  rename(EL_Theta_One=theta_one,EL_Theta_Two=theta_two) |> 
   mutate(StrategyNumber = 1:27)
 row.names(Loss_of_Utility_Table_Trans) <- 1:27
 
-Plot_Loss <- ggplot(Loss_of_Utility_Table_Trans,aes(SigmaOne,SigmaTwo))+
-  geom_point()+
+Admissible_Strategies <- Loss_of_Utility_Table_Trans[c(1,2,5,6,9,15,18,27),]
+
+Loss_of_Utility_Table_Trans$Admissible <- as.factor(ifelse(Loss_of_Utility_Table_Trans$StrategyNumber %in% Admissible_Strategies$StrategyNumber,"Yes","No"))
+
+
+Plot_Loss <- ggplot(Loss_of_Utility_Table_Trans,aes(EL_Theta_One,EL_Theta_Two))+
+  geom_point(aes(color=Admissible))+
   xlim(0,NA)+
   ylim(0,NA)+
-  labs(title = "Expected loss of utility for strategy")+
+  labs(title = "Expected loss of utility for each strategy",
+       x = "Theta one",
+       y = "Theta two")+
   geom_text(label=rownames(Loss_of_Utility_Table_Trans),
             hjust = 0,
             vjust = 1.3,
             check_overlap = T)+
   theme_light()
+# help from https://r-graph-gallery.com/275-add-text-labels-with-ggplot2.html
+
 Plot_Loss
+
 
 ```
 
@@ -148,6 +164,8 @@ Use the table of random digits to select an observation according to the probabi
 
 ```{r 5.2}
 #??
+ran_digits <- runif(10,min=10,max=100) |> round()
+
 ```
 
 ## 5.3
@@ -157,3 +175,14 @@ If Mr.Nelson replaced his weather meter by a crustal ball which told him the sta
 ```{r 5.3}
 #just rounded all the prob tables?
 ```
+
+# Equations
+
+**Bayes Strategy**
+5.6: $L(s)=(1-w)L(\theta_1,s)+wL(\theta_2,s)$
+
+## Bayes Strategy Function
+```{r}
+
+```
+
