got home commit

--- a/677_Notes_Quarto.qmd
+++ b/677_Notes_Quarto.qmd
@@ -136,6 +136,8 @@ Plot_Loss
 
 ```
 
+As shown above, admissible strategies (colored blue) 
+
 # Book Exercises
 
 These are exercises listed under Table 5.5 on pg 123.
